@startuml

title __BUILDER's Class Diagram__\n

  namespace in.ashwanik.pdp.builder {
    class in.ashwanik.pdp.builder.GithubJobClient {
        {static} ~ DEFAULT_TIMEOUT : Integer
        - baseUrl : String
        {static} + builder()
        + getJobs()
        - GithubJobClient()
    }
  }
  

  namespace in.ashwanik.pdp.builder {
    class in.ashwanik.pdp.builder.GithubJobClient.GithubJobClientBuilder {
        {static} - POOL_SIZE : int
        {static} - TIMEOUT : int
        - baseUrl : String
        - connectTimeout : Integer
        - httpClient : OkHttpClient
        - httpClientConnectionPoolSize : Integer
        - readTimeout : Integer
        - writeTimeout : Integer
        + baseUrl()
        + build()
        + clientContract()
        + connectTimeout()
        + httpClient()
        + httpClientConnectionPoolSize()
        + readTimeout()
        + writeTimeout()
        - GithubJobClientBuilder()
        - buildHttpClient()
        - isClientPropertySet()
        - setHttpClientDefaults()
        - validate()
    }
  }
  

  in.ashwanik.pdp.builder.GithubJobClient o-- in.ashwanik.pdp.common.githubjobs.GithubJobClientContract : githubJobClientContract
  in.ashwanik.pdp.builder.GithubJobClient o-- in.ashwanik.pdp.common.http.RestClient : restClient
  in.ashwanik.pdp.builder.GithubJobClient +-down- in.ashwanik.pdp.builder.GithubJobClient.GithubJobClientBuilder
  in.ashwanik.pdp.builder.GithubJobClient.GithubJobClientBuilder o-- in.ashwanik.pdp.common.githubjobs.GithubJobClientContract : clientContract


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
